Update 2 - Exporatory Data Analysis.ipynb

--- a/algorithm/notebooks/2 - Exporatory Data Analysis.ipynb
+++ b/algorithm/notebooks/2 - Exporatory Data Analysis.ipynb
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "62cb7193-d943-4735-9313-eda2dff815b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exploratory Data Analysis\n",
+    "# Load required modules\n",
     "import json\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9b3a69bb-08f6-464e-a4e0-c38cb737feb0",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b4ff5198-9321-4e28-a5fc-61104e4653d2",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "348e681a-8adc-4aa2-84d9-00ae37bf3ece",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "9dfeb460-d130-467f-a62c-18f7335cb1b0",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        " 'hexagon': 233}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "8b9eef0c-038b-4c4b-a61b-57d1753be3c1",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "1899"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "fd949603-85ca-4e1c-bf7b-3b3b2264a73d",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "[233, 360, 497, 255, 321, 233]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "cd8155b9-77d3-4f0e-98bb-3acea03dbc18",
    "metadata": {},
    "outputs": [
